service and about parts in Home Two page

--- a/EduHomeBack/EduHomeBack/Views/Home/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Home/Index.cshtml
@@ -33,53 +33,49 @@
     </div>
 </section>
 <!-- Background Area End -->
+
+
 <!-- Service Start -->
 <div class="service-area two pt-150 pb-150">
     <div class="container">
         <div class="row">
+            @foreach(var item in homeViewModel.Services)
+            {
             <div class="col-md-4 col-sm-4 col-xs-12">
                 <div class="single-service">
-                    <h3><a href="teacher.html">PROFESSIONAL TEACHER</a></h3>
-                    <p>I must explain to you how all this mistaken denouncing pleure and praising pain </p>
+                    <h3><a href="teacher.html">@item.Title</a></h3>
+                    <p>@item.Description </p>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service">
-                    <h3><a href="teacher.html">PROFESSIONAL TEACHER</a></h3>
-                    <p>I must explain to you how all this mistaken denouncing pleure and praising pain </p>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service">
-                    <h3><a href="teacher.html">PROFESSIONAL TEACHER</a></h3>
-                    <p>I must explain to you how all this mistaken denouncing pleure and praising pain </p>
-                </div>
-            </div>
+            }
+
         </div>
     </div>
 </div>
 <!-- Service End -->
+
+
 <!-- About Start -->
 <div class="about-area pb-155">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6">
                 <div class="about-content">
-                    <h2>WELCOME TO <span>EDUHOME</span></h2>
-                    <p>I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system, and expound the actual teachings  the master-builder of humanit happiness</p>
-                    <p class="hidden-sm">I must explain to you how all this mistaken idea of denouncing pleure and prsing pain was born and I will give you a complete account of the system</p>
+                    <h2>@Html.Raw(homeViewModel.HomeAbout.Title)</span></h2>
+                    <p>@Html.Raw(homeViewModel.HomeAbout.Description)</p>
                     <a class="default-btn" href="about.html">view courses</a>
                 </div>
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="about-img">
-                    <img src="~/img/about/about.png" alt="about">
+                    <img src="~/img/about/@homeViewModel.HomeAbout.Image" alt="about">
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- About End -->
+
 <!-- Courses Area Start -->
 <div class="courses-area two pt-150 pb-150 text-center">
     <div class="container">
