--- a/EduHomeBack/EduHomeBack/Views/_ViewImports.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using EduHomeBack.Models;
-@using EduHomeBack.ViewModels;
+﻿@using EduHomeBack.Models
+@using EduHomeBack.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
