--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                                     <ul>
                                         <li>
                                             <a asp-controller="Home" asp-action="Index">Home</a>
-                                            @*<ul>
+                                                @*<ul>
                                                     <li><a href="index.html">Home One</a></li>
                                                     <li><a href="index-2.html">Home Two</a></li>
                                                     <li><a href="index-3.html">Home Three</a></li>
@@ -75,38 +75,38 @@
                                                     <li><a href="index-5.html">Home Five</a></li>
                                                 </ul>*@
                                         </li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a asp-controller="About" asp-action="Index">About</a></li>
                                         <li>
                                             <a href="course.html">courses</a>
-                                            <ul>
+                                            @*<ul>
                                                 <li><a href="course.html">courses</a></li>
                                                 <li><a href="course-details.html">courses details</a></li>
-                                            </ul>
+                                            </ul>*@
                                         </li>
                                         <li>
                                             <a href="event.html">event</a>
-                                            <ul>
+                                            @*<ul>
                                                 <li><a href="event.html">event</a></li>
                                                 <li><a href="event-left-side-bar.html">event left sidebar</a></li>
                                                 <li><a href="event-right-side-bar.html">event right sidebar</a></li>
                                                 <li><a href="event-details.html">event details</a></li>
-                                            </ul>
+                                            </ul>*@
                                         </li>
                                         <li class="hidden-sm">
                                             <a href="teacher.html">teacher</a>
-                                            <ul>
+                                            @*<ul>
                                                 <li><a href="teacher.html">teacher</a></li>
                                                 <li><a href="teacher-details.html">teacher details</a></li>
-                                            </ul>
+                                            </ul>*@
                                         </li>
                                         <li>
                                             <a href="blog.html">blog</a>
-                                            <ul>
+                                            @*<ul>
                                                 <li><a href="blog.html">blog</a></li>
                                                 <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
                                                 <li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
                                                 <li><a href="blog-details.html">blog details</a></li>
-                                            </ul>
+                                            </ul>*@
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
                                         <li><a href="#">Buy Now</a>
