--- a/EduHomeBack/EduHomeBack/Views/Subscribe/Subscribe.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Subscribe/Subscribe.cshtml
@@ -49,7 +49,7 @@
                                     <span asp-validation-for="Surname" class="text-danger"></span>
                                 </div>
                                 <div class="mt-3">
-                                    <button asp-action="Index" type="submit" class="btn btn-block btn-danger btn-lg font-weight-medium auth-form-btn">SUBSCRIBE</button>
+                                    <button type="submit" class="btn btn-block btn-danger btn-lg font-weight-medium auth-form-btn">SUBSCRIBE</button>
                                 </div>                             
                             </form>
                         </div>
