Relations between Teachers and SocialNetwork tables, relations between Teachers and Positions tables, Testimonials Table, About Page(done), Tachers Page (done)

--- a/EduHomeBack/EduHomeBack/Views/Home/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Home/Index.cshtml
@@ -203,20 +203,23 @@
     <div class="container">
         <div class="row">
             <div class="testimonial-owl owl-theme owl-carousel">
-                <div class="col-md-8 col-md-offset-2 col-sm-12">
-                    <div class="single-testimonial">
-                        <div class="testimonial-info">
-                            <div class="testimonial-img">
-                                <img src="~/img/testimonial/@homeViewModel.Testimonial.Image" alt="testimonial">
-                            </div>
-                            <div class="testimonial-content">
-                                <p>@homeViewModel.Testimonial.Description</p>
-                                <h4>@homeViewModel.Testimonial.Fullname</h4>
-                                <h5>@homeViewModel.Testimonial.Position</h5>
+                @foreach (var item in homeViewModel.Testimonial) 
+                {
+                    <div class="col-md-8 col-md-offset-2 col-sm-12">
+                        <div class="single-testimonial">
+                            <div class="testimonial-info">
+                                <div class="testimonial-img">
+                                    <img src="~/img/testimonial/@item.Image" alt="testimonial">           
+                                </div>
+                                <div class="testimonial-content">
+                                    <p>@item.Description</p>
+                                    <h4>@item.Fullname</h4>
+                                    <h5>@item.Position</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                }
             </div>
         </div>
     </div>
