--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                                             </ul>*@
                                         </li>
                                         <li class="hidden-sm">
-                                            <a href="teacher.html">teacher</a>
+                                            <a asp-controller="Teacher" asp-action="Index">teacher</a>
                                             @*<ul>
                                                 <li><a href="teacher.html">teacher</a></li>
                                                 <li><a href="teacher-details.html">teacher details</a></li>
