--- a/EduHomeBack/EduHomeBack/Views/About/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/About/Index.cshtml
@@ -5,15 +5,17 @@
 }
 
 
-<!-- Banner Area Start -->
+
+@*@await Component.InvokeAsync("Banner", "AboutUs")*@
+
 <div class="banner-area-wrapper" style="margin-bottom: 100px">
-    <div class="banner-area text-center">
+    <div class="banner-area text-center" style="background: rgba(0, 0, 0, 0) url('../img/banner/banner.jpg') no-repeat scroll center center / cover">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <div class="banner-content-wrapper">
                         <div class="banner-content">
-                            <h2>about us</h2>
+                            <h2>About Us</h2>
                         </div>
                     </div>
                 </div>
@@ -21,7 +23,7 @@
         </div>
     </div>
 </div>
-<!-- Banner Area End -->
+
 @*About Start*@
 <div class="about-area pb-155">
     <div class="container">
@@ -44,33 +46,74 @@
 @*About End*@
 
 
-@*meet our teachers*@
+<!-- Teacher Start -->
+<div class="teacher-area pb-150">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="section-title text-center">
+                    <img src="img/icon/section.png" alt="title">
+                    <h2>meet our teachers</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            @foreach (var item in aboutViewModel.Teachers)
+            {
+                <div class="col-md-3 col-sm-4 col-xs-12">
+                    <div class="single-teacher">
+                        <div class="single-teacher-img">
+                            <a href="teacher-details.html"><img src="img/teacher/@item.Image" alt="teacher"></a>
+                        </div>
+                        <div class="single-teacher-content text-center">
+                            <h2><a href="teacher-details.html">@item.Name</a></h2>
+                            <h4>@item.Position</h4>
+                            @foreach (var social in aboutViewModel.SocialNetworks)
+                            {
+                                <ul>
+                                    <li><a href="@social.Facebook"><i class="zmdi zmdi-facebook"></i></a></li>
+                                    <li><a href="@social.Pinterest"><i class="zmdi zmdi-pinterest"></i></a></li>
+                                    <li><a href="@social.Vimeo"><i class="zmdi zmdi-vimeo"></i></a></li>
+                                    <li><a href="@social.Twitter"><i class="zmdi zmdi-twitter"></i></a></li>
+                                </ul>
+                            }
 
-@*Testimonial Area Start*@
+                        </div>
+                    </div>
+                </div>
+            }
+
+        </div>
+    </div>
+</div>
+<!-- Teacher End -->
+<!-- Testimonial Area Start -->
 <div class="testimonial-area pt-110 pb-105 text-center">
     <div class="container">
         <div class="row">
             <div class="testimonial-owl owl-theme owl-carousel">
-                <div class="col-md-8 col-md-offset-2 col-sm-12">
-                    <div class="single-testimonial">
-                        <div class="testimonial-info">
-                            <div class="testimonial-img">
-                                <img src="~/img/testimonial/@aboutViewModel.Testimonial.Image" alt="testimonial">
-                            </div>
-                            <div class="testimonial-content">
-                                <p>@aboutViewModel.Testimonial.Description</p>
-                                <h4>@aboutViewModel.Testimonial.Fullname</h4>
-                                <h5>@aboutViewModel.Testimonial.Position</h5>
+                @foreach (var item in aboutViewModel.Testimonial)
+                {
+                    <div class="col-md-8 col-md-offset-2 col-sm-12">
+                        <div class="single-testimonial">
+                            <div class="testimonial-info">
+                                <div class="testimonial-img">
+                                    <img src="~/img/testimonial/@item.Image" alt="testimonial">
+                                </div>
+                                <div class="testimonial-content">
+                                    <p>@item.Description</p>
+                                    <h4>@item.Fullname</h4>
+                                    <h5>@item.Position</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                }
             </div>
         </div>
     </div>
 </div>
-@*Testimonial Area End*@
-
+<!-- Testimonial Area End -->
 @*Notice Start*@
 <section class="notice-area two pt-140">
     <div class="container">
