Banner, new relation for Teacher_And_SocialNetworks

--- a/EduHomeBack/EduHomeBack/Views/Teacher/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Teacher/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿
 @{
     ViewData["Title"] = "Teacher Index";
-    TeacherViewModel teacherViewModel = Model;
+    List<Teacher> teachers = Model;
 }
 
+@await Component.InvokeAsync("Banner", "OurTeachers")
 
 <!-- Teacher Start -->
 <div class="teacher-area pt-150 pb-105">
     <div class="container">
-        @*seach part*@
+        <!-- SearchBar Start -->
         <div class="row">
             <div class="col-xs-12">
                 <div class="course-title">
@@ -22,31 +23,10 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            @foreach (var item in teacherViewModel.Teachers)
-            {
-                <div class="col-md-3 col-sm-4 col-xs-12">
-                    <div class="single-teacher mb-45">
-                        <div class="single-teacher-img">
-                            <a href="teacher-details.html"><img src="img/teacher/@item.Image" alt="teacher"></a>
-                        </div>
-                        <div class="single-teacher-content text-center">
-                            <h2><a href="teacher-details.html">@item.Name</a></h2>
-                            <h4>@item.Position</h4>
-                            @foreach (var social in teacherViewModel.SocialNetworks)
-                            {
-                                <ul>
-                                    <li><a href="@social.Facebook"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="@social.Pinterest"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="@social.Vimeo"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="@social.Twitter"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            }
-                        </div>
-                    </div>
-                </div>
-            }
+        <!-- SearchBar End -->
 
+        <div class="row">
+            @await Component.InvokeAsync("Teacher", 12)
         </div>
     </div>
 </div>
