--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/animate.css">
     <link rel="stylesheet" href="~/css/meanmenu.css">
     <link rel="stylesheet" href="~/css/magnific-popup.css">
@@ -77,7 +78,7 @@
                                         </li>
                                         <li><a asp-controller="About" asp-action="Index">About</a></li>
                                         <li>
-                                            <a href="course.html">courses</a>
+                                            <a asp-controller="CourseList" asp-action="Index">courses</a>
                                             @*<ul>
                                                 <li><a href="course.html">courses</a></li>
                                                 <li><a href="course-details.html">courses details</a></li>
