EventList and Event Pages

--- a/EduHomeBack/EduHomeBack/Views/Shared/Components/Banner/Default.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/Components/Banner/Default.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="banner-area-wrapper" style="margin-bottom: 100px">
-    <div class="banner-area text-center" style="background: rgba(0, 0, 0, 0) url('../img/banner/@banner.Image') no-repeat scroll center center /cover">
+    <div class="banner-area text-center" style="background: rgba(0, 0, 0, 0) url('@Url.Content($"~/img/banner/{banner.Image}")') no-repeat scroll center center";>
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
