--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -78,14 +78,14 @@
                                         </li>
                                         <li><a asp-controller="About" asp-action="Index">About</a></li>
                                         <li>
-                                            <a asp-controller="CourseList" asp-action="Index">courses</a>
+                                            <a asp-controller="Course" asp-action="Index">courses</a>
                                             @*<ul>
                                                 <li><a href="course.html">courses</a></li>
                                                 <li><a href="course-details.html">courses details</a></li>
                                             </ul>*@
                                         </li>
                                         <li>
-                                            <a href="event.html">event</a>
+                                            <a asp-controller="Event" asp-action="Index" >event</a>
                                             @*<ul>
                                                 <li><a href="event.html">event</a></li>
                                                 <li><a href="event-left-side-bar.html">event left sidebar</a></li>
